--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.1.0",
+    "express-handlebars": "^5.2.1",
     "express-session": "^1.17.1",
-    "helmet": "^4.1.1",
-    "moment": "^2.29.0",
+    "helmet": "^4.4.1",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
+    "node": "^15.10.0",
+    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.3.5"
